--- a/client/views/home/contact.html
+++ b/client/views/home/contact.html
@@ -6,7 +6,7 @@
 </head>
 <div class="inner_page_agile">
     <h3>Liên hệ</h3>
-    <p>Chúng tôi mong muốn lắng nghe đóng góp</p>
+    <p>Chúng tôi mong muốn lắng nghe đóng góp của quí vị</p>
 </div>
 <div class="services-breadcrumb_w3layouts">
     <div class="inner_breadcrumb">
