--- a/client/views/home/index.html
+++ b/client/views/home/index.html
@@ -90,7 +90,7 @@
 			<h3 class="tittle">Hiện có {{listPost.length}} công việc </h3>
 		</div>
 		<div class="inner_sec_grids_info_w3ls">
-			<div class="col-md-9 job_info_left">
+			<div class="col-md-8 job_info_left">
 				<div class="but_list">
 					<div class="bs-example bs-example-tabs" role="tabpanel" data-example-id="togglable-tabs">
 						<ul id="myTab" class="nav nav-tabs" role="tablist">
@@ -288,54 +288,118 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-3 job_info_right">
+		<div class="col-md-4 job_info_right">
 
 			<div class="widget_search">
 				<h5 class="widget-title">Công ty nổi bật</h5>
 				<div class="widget-content">
-					<ul>
-						<img src="views/home/images/c1.gif" class="img-responsive" />
-						<img src="views/home/images/c2.gif" class="img-responsive" />
-						<img src="views/home/images/c3.gif" class="img-responsive" />
-						<img src="views/home/images/c4.gif" class="img-responsive" />
-						<img src="views/home/images/c5.gif" class="img-responsive" />
-						<img src="views/home/images/c6.gif" class="img-responsive" />
+					<ul class="list_2">
+						<li>
+							<div class="friends-grids">
+								<div class="grids-left">
+									<a href="">
+										<img src="views/home/images/banner4.jpg" style="width: 65px; height: 65px;" />
+									</a>
+								</div>
+								<div class="grids-right">
+									<h2>FPT Software</h2>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="friends-grids">
+								<div class="grids-left">
+									<img src="views/home/images/c5.gif" style="width: 65px; height: 65px;" />
+								</div>
+								<div class="grids-right">
+									<h2>Magestore</h2>
+								</div>
+							</div>
+						</li>
+						<li>
+							<div class="friends-grids">
+								<div class="grids-left">
+									<img src="views/home/images/banner1.jpg" style="width: 65px; height: 65px;" />
+								</div>
+								<div class="grids-right">
+									<h2>Vina Acecook</h2>
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
+
 			<div class="col_3 permit">
-				<h3>Jobs by Category</h3>
+				<h3>Các công ty follow</h3>
 				<ul class="list_2">
 					<li>
-						<a href="#">Railway Recruitment</a>
+						<div class="friends-grids">
+							<div class="grids-left">
+								<a href="">
+									<img src="views/home/images/banner4.jpg" style="width: 65px; height: 65px;" />
+								</a>
+							</div>
+							<div class="grids-right">
+								<h2>FPT Software</h2>
+							</div>
+						</div>
 					</li>
 					<li>
-						<a href="#">Air Force Jobs</a>
+						<div class="friends-grids">
+							<div class="grids-left">
+								<img src="views/home/images/c5.gif" style="width: 65px; height: 65px;" />
+							</div>
+							<div class="grids-right">
+								<h2>Magestore</h2>
+							</div>
+						</div>
 					</li>
 					<li>
-						<a href="#">Police Jobs</a>
-					</li>
-					<li>
-						<a href="#">Intelligence Bureau Jobs</a>
-					</li>
-					<li>
-						<a href="#">Army Jobs</a>
-					</li>
-					<li>
-						<a href="#">Navy Jobs</a>
-					</li>
-					<li>
-						<a href="#">BSNL Jobs</a>
-					</li>
-					<li>
-						<a href="#">Software Jobs</a>
-					</li>
-					<li>
-						<a href="#">Research Jobs</a>
+						<div class="friends-grids">
+							<div class="grids-left">
+								<img src="views/home/images/banner1.jpg" style="width: 65px; height: 65px;" />
+							</div>
+							<div class="grids-right">
+								<p></p>
+								<h2>Vina Acecook</h2>
+							</div>
+						</div>
 					</li>
 				</ul>
 			</div>
-
+			<div class="col_3 permit">
+					<h3>Jobs by Category</h3>
+					<ul class="list_2">
+						<li>
+							<a href="#">Railway Recruitment</a>
+						</li>
+						<li>
+							<a href="#">Air Force Jobs</a>
+						</li>
+						<li>
+							<a href="#">Police Jobs</a>
+						</li>
+						<li>
+							<a href="#">Intelligence Bureau Jobs</a>
+						</li>
+						<li>
+							<a href="#">Army Jobs</a>
+						</li>
+						<li>
+							<a href="#">Navy Jobs</a>
+						</li>
+						<li>
+							<a href="#">BSNL Jobs</a>
+						</li>
+						<li>
+							<a href="#">Software Jobs</a>
+						</li>
+						<li>
+							<a href="#">Research Jobs</a>
+						</li>
+					</ul>
+				</div>
 		</div>
 		<div class="clearfix"></div>
 	</div>
