--- a/client/views/student/css/cv1.css
+++ b/client/views/student/css/cv1.css
@@ -1,3 +1,21 @@
+h4, h5, h6,
+h1, h2, h3 {margin-top: 0;}
+ul, ol {margin: 0;}
+p {margin: 0;}
+html,body{
+	font-family: 'Open Sans', sans-serif;
+  background-color: #F5FDFC;
+}
+body a{
+    transition:0.5s all;
+	-webkit-transition:0.5s all;
+	-moz-transition:0.5s all;
+	-o-transition:0.5s all;
+	-ms-transition:0.5s all;
+  text-decoration: none;
+  color: black;
+}
+
 .head-nav {
   float: left;
   width: 50%;
@@ -32,6 +50,20 @@
 	padding:0;
 	margin: 0;
 }
+.user-account label{
+  color: white;
+}
+.user-account i{
+  background-color: grey;
+  border-radius: 50px;
+}
+*,
+*:after,
+*::before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 .head-nav ul li {
 	display: inline-block;
 	margin: 0 .5em;
@@ -52,10 +84,117 @@
 }
 nav {
   width:100%;
-  height:70px;
+  height:60px;
   background: #292f36;
-  position:fixed;
+  postion:fixed;
   z-index:10;
+}
+.site-content{
+  margin-top: 50px;
+}
+.wp-post-image{
+  margin: 30px;
+  padding: 5px;
+  width: 200px;
+  height: 200px;
+  border: solid 3px red;
+  border-radius: 100px;
+}
+.information-left{
+  margin-left: 30px;
+  padding: 10px;
+  background-color: #fff;
+  text-decoration: none;
+}
+.information{
+  margin-top: 20px;  
+  margin-right: 100px;
+  padding: 10px;
+  background-color: #fff;
+  text-decoration: none;
+}
+.information .title{
+   padding: 10px 20px;
+   font-size: 1.5em;   
+   font-weight: bold;
+   border-bottom: solid 1px grey;
+}
+.information .title i{
+  width: 5%;
+}
+.information .content{
+  padding: 20px 20px 0px 20px;
+}
+.information .content li:before {
+  content: "\f00c"; /* FontAwesome Unicode */
+  font-family: FontAwesome;
+  display: inline-block;
+  margin-left: -1.3em; /* same as padding-left set on li */
+  width: 1.3em;
+}
+.general{
+  border:  2px ;
+  padding: 10px;
+}
+.general .name{
+  color: orange;
+  text-align: center;
+}
+.general ul{
+  list-style: none;
+}
+.general li:before {
+  content: "\f02d"; /* FontAwesome Unicode */
+  font-family: FontAwesome;
+  display: inline-block;
+  margin-left: -1.3em; /* same as padding-left set on li */
+  width: 1.3em; /* same as padding-left set on li */
+}
+.application-command{
+  float: right;
+  padding: 50px 80px;
+  margin-right: 80px;
+}
+.buttons{
+  padding-top: 30px;
+  padding-left: 350px;
+}
+.footer-top {
+  background: #222222; 
+  padding: 2em 0;
+}
+.footer-top p {
+  color: #eeeeee;
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.5em;
+  margin: 1em 0;
+}
+.footer-top h6 {
+  color: #ffffff;
+  font-size: 1em;
+  font-weight: 700;
+  margin: 0;
+}
+.footer-top h3 {
+  color: #ffffff;
+  font-size: 1.5em;
+  font-weight: 700;
+  margin: 1em 0;
+}
+.footer-top li {
+  display: block;
+  line-height: 1em;
+}
+.footer-top ul {
+  padding: 0;
+}
+.footer-top li a {
+  color: #6d7a83;
+  font-size: 1em;
+}
+.footer-top li a:hover{
+  color: #42E4d8;
 }
 .logo {
   float: left;
@@ -159,9 +298,82 @@ ul a:focus {
 }
 .profile_details ul li ul.dropdown-menu.drp-mnu {
     padding: 1em;
+    min-width: 135px !important;
+    top: 122%;
+    left: -90px;
+}
+span.prfil-img i.fa.fa-user {
+    color: #ffffff;
+    background: #00bcd4;
+    height: 41px;
+    width: 41px;
+    padding: .7em 0 0 0;
+    text-align: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+ul.dropdown-menu.drp-mnu li {
+    list-style-type: none;
+    padding: 3px 0;
+}
+.dropdown-menu > li > a {
+    padding: 3px 15px;
+    font-size: 1em;
+}
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
+    background: none !important;
+    color: #67D3E0 !important;
+}
+.agile-grid {
+    width: 50%;
+    float: left;
+}
+.grid {
+  border: solid 10px #d8d8d8;
+    margin-bottom: 2em;
+    background: #FFFFFF;
+}
+.grid-info {
+    background: #fff;
+    padding: 1em;
+}
+/*--Progress bars--*/
+
+.profile_details {
+    float: right;
+    margin-left: 1em;
+}
+.profile_details ul li {
+    list-style-type: none;
+    position: relative;
+}
+.profile_details_drop a.dropdown-toggle {
+    display: block;
+}
+.profile_img span.prfil-img {
+    float: left;
+}
+.profile_details ul li ul.dropdown-menu.drp-mnu {
+    padding: 1em;
     min-width: 160px !important;
     top: 55px;
     left: 30px;
+}
+span.prfil-img i.fa.fa-user {
+    color: #ffffff;
+    background: #00bcd4;
+    height: 41px;
+    width: 41px;
+    padding: .7em 0 0 0;
+    text-align: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -o-border-radius: 50%;
 }
 ul.dropdown-menu.drp-mnu li {
     list-style-type: none;
@@ -177,6 +389,9 @@ ul.dropdown-menu.drp-mnu li {
 }
 .profile_details_drop a.dropdown-toggle {
     display: block;
+}
+.profile_img span.prfil-img {
+    float: left;
 }
 @media(max-width:1024px){
 .head-nav {
