--- a/client/views/student/login.html
+++ b/client/views/student/login.html
@@ -1,95 +1,109 @@
 <head>
-  <meta charset="UTF-8" />
-  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">  -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
-    rel="stylesheet">
-  <link href="views/student/css/login.css" rel="stylesheet" type="text/css">
-  <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-  <link type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="vendor/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="views/home/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="views/home/css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
 
 </head>
 
-<div class="container" style="position: fixed;">
-  <header>
-    <h1>Login and Registration Form</h1>
-  </header>
-  <section>
-    <div id="container_demo">
-      <!-- hidden anchor to stop jump http://www.css3create.com/Astuce-Empecher-le-scroll-avec-l-utilisation-de-target#wrap4  -->
-      <h1 class="text-notifi" ng-if="showNotifi"> {{textNotifi}} </h1>
-      <div id="wrapper">
+<div class="inner_page_agile">
+    <h3>Login</h3>
+    <p>Sinh viên đăng nhập </p>
 
-        <div id="login" class="animate form" ng-if="login">
-          <form name="loginForm" ng-submit="signIn()">
-            <h1>Log in</h1>
-            <p>
-              <label for="email" class="uname"> Your email </label>
-              <input class="form-control" id="email" ng-model="user.email" name="email" ng-required=true ng-pattern="/[\d]+@student\.hust\.edu\.vn$/"
-                type="email" placeholder="20141943@student.hust.edu.vn" />
-              <span class="text-danger" ng-show="!loginForm.email.$error.required&&loginForm.email.$error.pattern"> * Hust email address is required</span>
-            </p>
+</div>
+<!--//banner -->
+<!--/w3_short-->
+<div class="services-breadcrumb_w3layouts">
+    <div class="inner_breadcrumb">
 
-            <p>
-              <label for="password" class="youpasswd"> Your password </label>
-              <input id="password" ng-model="user.password" name="password" required="required" type="password" placeholder="eg. X8df!90EO"
-              />
-            </p>
-            <!-- <p class="keeplogin">
-                <input type="checkbox" name="loginkeeping" id="loginkeeping" value="loginkeeping" />
-                <label for="loginkeeping">Keep me logged in</label>
-              </p> -->
-            <p ng-show="errLogin" class="text-danger" text> {{textLogin}} </p>
-            <p class="login button">
-              <button type="submit" class="btn btn-primary" ng-disabled="loginForm.$invalid">Signin</button>
-            </p>
-
-            <p class="change_link">
-              Not a member yet ?
-              <a ng-click="show('register')" class="to_register">Join us</a>
-            </p>
-          </form>
-
-        </div>
-
-
-
-        <div id="register" class="animate form" ng-if="!login">
-          <form name="registerForm" ng-submit="register()" autocomplete="on">
-            <h1> Sign up </h1>
-            <p>
-              <label for="usernamesignup" class="uname">Your username</label>
-              <input id="usernamesignup" ng-model="student.name" name="usernamesignup" required="required" type="text" placeholder="Bạn tên là gì nhỉ ?"
-              />
-            </p>
-            <p>
-              <label for="emailsignup" class="youmail"> Your email</label>
-              <input id="emailsignup" name="emailsignup" ng-model="student.email" ng-required=true ng-pattern="/[\d]+@student\.hust\.edu\.vn$/"
-                placeholder="20141943@student.hust.edu.vn" />
-              <span class="text-danger" ng-show="!registerForm.emailsignup.$error.required&&registerForm.emailsignup.$error.pattern"> * Hust email address is required</span>
-            </p>
-            <p>
-              <label for="passwordsignup" class="youpasswd">Your password </label>
-              <input id="passwordsignup" name="passwordsignup" ng-model="student.password" required="required" type="password" placeholder="eg. X8df!90EO"
-              />
-            </p>
-            <p>
-              <label for="passwordsignup_confirm" class="youpasswd">Please confirm your password </label>
-              <input id="passwordsignup_confirm" name="passwordsignup_confirm" ng-model="student.repass" required="required" type="password"
-                placeholder="eg. X8df!90EO" />
-            </p>
-            <p ng-show="usernameIsExisting" class="p_errorLogin"> * Tài khoản đã tồn tại, vui lòng thử lại với email mới </p>
-            <p class="signin button">
-              <button type="submit" class="btn btn-primary" ng-disabled="registerForm.$invalid">Signup</button>
-            </p>
-            <p class="change_link">
-              Already a member ?
-              <a ng-click="show('login')" class="to_register"> Go and log in </a>
-            </p>
-          </form>
-
-        </div>
-      </div>
+        <ul class="short_w3ls" _w3ls>
+            <li>
+                <a href="index.html">Home</a>
+                <span>|</span>
+            </li>
+            <li>Login</li>
+        </ul>
     </div>
-  </section>
+</div>
+<div class="inner_content_info_agileits" ng-if="login">
+    <div class="container">
+        <div class="tittle_head_w3ls">
+            <h3 class="tittle three">LogIn to your Account </h3>
+        </div>
+        <div class="inner_sec_grids_info_w3ls">
+            <div class="signin-form">
+                <div class="login-form-rec">
+                    <h1 class="text-notifi" ng-if="showNotifi"> {{textNotifi}} </h1>
+                    <form name="loginForm" ng-submit="signIn()">
+                        <input id="email" ng-model="user.email" placeholder="E-mail" name="email" ng-required=true ng-pattern="/[\d]+@student\.hust\.edu\.vn$/"
+                            type="email" placeholder="20141943@student.hust.edu.vn" />
+                        <span class="text-danger" ng-show="!loginForm.email.$error.required&&loginForm.email.$error.pattern"> * Hust email address is required</span>
+
+                        <input id="password" ng-model="user.password" placeholder="Password" name="password" required="required" type="password"
+                        />
+
+                        <div class="tp">
+                            <p ng-show="errLogin" class="text-danger" text> {{textLogin}} </p>
+                            <input type="submit" value="Login" ng-disabled="loginForm.$invalid" />
+                        </div>
+                    </form>
+                </div>
+                <div class="login-social-grids">
+                    <ul>
+                        <li>
+                            <a>
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <i class="fa fa-rss"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <p>
+                    <a ng-click="show('register')"> Don't have an account?</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="inner_content_info_agileits" ng-if="!login">
+    <div class="container">
+        <div class="tittle_head_w3ls">
+            <h3 class="tittle three">Register Now </h3>
+        </div>
+        <div class="inner_sec_grids_info_w3ls">
+            <div class="signin-form">
+                <div class="login-form-rec">
+                    <form name="registerForm" ng-submit="register()" autocomplete="on">
+                        <input id="usernamesignup" ng-model="student.name" name="name" required="required" type="text" placeholder="Bạn tên là gì nhỉ ?"
+                        />
+                        <input id="emailsignup" type="email" name="emailsignup" ng-model="student.email" ng-required=true ng-pattern="/[\d]+@student\.hust\.edu\.vn$/"
+                            placeholder="20141943@student.hust.edu.vn" />
+                        <span class="text-danger" ng-show="!registerForm.emailsignup.$error.required&&registerForm.emailsignup.$error.pattern"> * Hust email address is required</span>
+                        <input id="passwordsignup" name="passwordsignup" ng-model="student.password" required="required" type="password" placeholder="Password"
+                        />
+                        <input id="passwordsignup_confirm" name="passwordsignup_confirm" ng-model="student.repass" required="required" type="password"
+                            placeholder="Re-Password" />
+                        <p ng-show="usernameIsExisting" class="p_errorLogin"> * Tài khoản đã tồn tại, vui lòng thử lại với email mới </p>
+                        <h4 class="text-notifi" ng-if="showNotifi"> {{textNotifi}} </h4>
+                        <input type="submit" value="Register" ng-disabled="registerForm.$invalid">
+                    </form>
+                    <p class="reg">
+                        <a> By clicking register, I agree to your terms</a>
+                    </p>
+                </div>
+                <p>
+                    <a ng-click="show('login')"> Already a member ?</a>
+                </p>
+
+            </div>
+        </div>
+    </div>
 </div>
