--- a/client/views/header/css/style.css
+++ b/client/views/header/css/style.css
@@ -1,3 +1,26 @@
+
+.header-right2 li {
+  display: inline-block;
+  padding: 0.5em; 
+}
+.header-right2 li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1em;
+  background: #42E4d8;
+  padding: 0.5em 1.5em;
+  border-radius: 3px;
+}
+.header-right2 li a:hover{
+  color: #fff;
+  background: #666666;
+}
+.header-right2 {
+  float: right;
+  vertical-align: middle;
+  margin: 1em 0;
+}
+
 .head-nav {
   float: left;
   width: 50%;
