--- a/client/views/header/index.html
+++ b/client/views/header/index.html
@@ -13,7 +13,7 @@
 						</a>
 					</div>
 					<div class="head-nav">
-						<span class="menu" > </span>
+						<span class="menu"> </span>
 						<ul class="cl-effect-3">
 							<li class="active">
 								<a ui-sref="home">Trang Chủ</a>
@@ -38,29 +38,37 @@
 						</script>
 						<!-- script-for-nav -->
 					</div>
-					<div class="header-right1">
-						<div class="profile_details"class="dropdown profile_details_drop" uib-dropdown>
-			
-									<a  class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" aria-expanded="true">
-										<div class="profile_img">
-											<!-- <span class="prfil-img"><i class="fa fa-user" aria-hidden="true"></i></span> -->
-											<img class="avatar" src="views/header/images/avt.jpg" alt="Mountain View" width="50" height="50">
-											<label>Judy</label>
-										</div>
-									</a>
-									<ul class="dropdown-menu drp-mnu" uib-dropdown-menu>
-										<li>
-											<a href="student/profile">
-												<i class="fa fa-cog"></i> Edit Profile</a>
-										</li>
-										
-										<li>
-											<a >
-												<i class="fa fa-sign-out" ng-click="logout()"></i> Logout</a>
-										</li>
-									</ul>
-								
+					<div class="header-right1" ng-if="currentUser">
+						<div class="profile_details" class="dropdown profile_details_drop" uib-dropdown>
+
+							<a class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" aria-expanded="true">
+								<div class="profile_img">
+									<!-- <span class="prfil-img"><i class="fa fa-user" aria-hidden="true"></i></span> -->
+									<img class="avatar" src="views/header/images/avt.jpg" alt="Mountain View" width="50" height="50">
+									<label>Judy</label>
+								</div>
+							</a>
+							<ul class="dropdown-menu drp-mnu" uib-dropdown-menu>
+								<li>
+									<a href="student/profile">
+										<i class="fa fa-cog"></i> Edit Profile</a>
+								</li>
+
+								<li>
+									<a>
+										<i class="fa fa-sign-out" ng-click="logout()"></i> Logout</a>
+								</li>
+							</ul>
+
 						</div>
+					</div>
+					<div class="header-right2" ng-if="!currentUser">
+						<li>
+							<a href="/login">Sinh viên</a>
+						</li>
+						<li>
+							<a onclick="window.location.replace('/company')" >Công ty</a>
+						</li>
 					</div>
 				</div>
 			</div>
